tests/baselines/reference/exportDefaultClassAndValue.errors.txt
exportDefaultClassAndValue.ts(2,1): error TS2323: Cannot redeclare exported variable 'default'.
exportDefaultClassAndValue.ts(3,22): error TS2323: Cannot redeclare exported variable 'default'.


==== exportDefaultClassAndValue.ts (2 errors) ====
    const foo = 1
    export default foo
    ~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    export default class Foo {}
                         ~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    